Resolve issue with icons being cropped inside buttons on console page

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -12,6 +12,10 @@ body {
   overflow: hidden;
 }
 
+i{
+  overflow: visible;
+}
+
 ul {
   margin: 0;
   padding-left: 20px;
